update meta tags

--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,13 @@
       {
         "link-name": "off"
       }
-    ]
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "document-title": "off"
+      }
+    ],
+    "meta-charset-utf-8": "off"
   }
 }
